--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@react-next-calendar/core": "^1.0.2",
     "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.24.6",
@@ -37,13 +38,14 @@
     "react": "18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-select": "^5.7.2",
     "sass": "^1.56.2",
     "sequelize": "^6.28.0",
     "sequelize-auto": "^0.8.8",
     "sweetalert": "^2.1.2",
     "uuid": "^9.0.0",
-    "yup": "^1.0.2"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
